<resources>
    <string name="app_name">ParkYourCar</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="remember_me">Remember me</string>
    <string name="user_email_hint">User Email</string>
    <string name="user_password_hint">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="password_confirmation">Password Once Again</string>
    <string name="email_hint">User email: </string>
    <string name="last_login">Last login: </string>
    <string name="tickets">Tickets total: </string>
    <string name="home">Home</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="location">Location</string>
    <string name="report">Report</string>
    <string name="update_profile">Update Profile</string>
    <string name="instruction">Instruction</string>
    <string name="contact">Contact</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>