<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_add_ticket"
                android:icon="@drawable/ic_add_ticket"
                android:title="@string/add_ticket" />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_report"
                android:title="@string/report" />
            <item
                android:id="@+id/nav_location"
                android:icon="@drawable/ic_location"
                android:title="@string/location" />
        </menu>
    </item>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_update_profile"
                android:icon="@drawable/ic_update_profile"
                android:title="@string/update_profile" />
            <item
                android:id="@+id/nav_instruction"
                android:icon="@drawable/ic_instruction"
                android:title="@string/instruction" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
