<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/user_first_name_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_last_name_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/user_first_name_edit_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/user_email_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email_hint"
        android:inputType="textWebEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/user_last_name_edit_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/user_number_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/user_email_edit_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/user_password_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/user_number_edit_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/user_password_confirmation_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/user_password_edit_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signup"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_password_confirmation_edit_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="signUp"/>

</android.support.constraint.ConstraintLayout>