<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/login_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_view"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tickets_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_date_text_view"
        android:textColor="#000000"
        android:textSize="16sp"/>


</android.support.constraint.ConstraintLayout>