<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".HomeFragment"
    tools:layout_editor_absoluteY="56dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_hint"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_login"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_view" />

    <TextView
        android:id="@+id/tickets_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_date_text_view" />
</android.support.constraint.ConstraintLayout>